Revert "Feature/auth system"

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,40 @@
 # Django Settings
-SECRET_KEY=django-insecure-CHANGE-ME-IN-PRODUCTION-use-python-manage-py-generate-secret-key
+SECRET_KEY=your-secret-key-here-change-in-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (SQLite for development, PostgreSQL for production)
-# DATABASE_URL=postgresql://user:password@localhost:5432/capstone_db
+# Database (PostgreSQL recommended for production)
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=capstone_db
+DB_USER=postgres
+DB_PASSWORD=your-db-password
+DB_HOST=localhost
+DB_PORT=5432
+
+# CORS Settings (for Next.js frontend)
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # JWT Settings
-JWT_ACCESS_TOKEN_LIFETIME=60
-JWT_REFRESH_TOKEN_LIFETIME=1440
+JWT_SECRET_KEY=your-jwt-secret-key
+JWT_ACCESS_TOKEN_LIFETIME=60  # minutes
+JWT_REFRESH_TOKEN_LIFETIME=1440  # minutes (24 hours)
 
-# Google OAuth Settings (Get from Google Cloud Console)
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/admin/google-callback/
+# Email Settings (optional)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@example.com
+EMAIL_HOST_PASSWORD=your-email-password
 
-# CORS Settings
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# File Upload Settings
+MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
+
+# Static and Media Files
+STATIC_URL=/static/
+MEDIA_URL=/media/
+
+# Security (set to True in production)
+SECURE_SSL_REDIRECT=False
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
